[package]
name = "counter"
version = "0.4.3"
authors = ["Peter Goodspeed-Niklaus <peter.r.goodspeedniklaus@gmail.com>"]
description = "Simple package to count generic iterables"
repository = "https://github.com/coriolinus/counter-rs"
documentation = "https://docs.rs/counter"
readme = "README.md"
keywords = ["count"]
license = "MIT"

[features]
parallel = ["rayon"]

[dependencies]
num-traits = "0.2"
rayon = { version = "1.0", optional = true }

[dev-dependencies]
maplit = "1.0"
